data/derived/sp14/progs/unify/prog2559.ml.out
Characters 38-39:
  let f a x = fun x -> x x in
                         ^
Error: This expression has type 'a -> 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b
